Establecer la organización de capas en base a la arquitectura hexagonal. Crear modelo User

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,19 @@
 spring.application.name=server
-server.port = 4000
-spring.datasource.url = jdbc:mysql://localhost:3306/library?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+
+#DataSource settings
+server.port = 8082
+spring.datasource.url = jdbc:mysql://localhost:3306/vallarino-library?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username = root
-spring.datasource.password = ""
-spring.jpa.hibernate.ddl-auto=none 
+spring.datasource.password =
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+
+#Hibernate settings
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-mysql= true
+spring.jpa.propierties.hibernate.dialect = org.hibernate.dialect.MYSQL8Dialect
+spring.jpa.propierties.hibernate.format_sql = true
+
+#Logging settings
+logging.level.org.hibernate.SQl = DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder= TRACE
